--- a/src/material/calculadora/index.html
+++ b/src/material/calculadora/index.html
@@ -22,7 +22,7 @@
     <label><br><br>Valor 2 </label>
     <input id="valor2" type="text" />
     <br><br>
-    <button id="somar" onclick="calculadora()">Cálculo</button>
+    <button id="somar" onclick="calculadora()">Soma</button>
 </fieldset>
 </body>
 </html>
